--- a/src/components/sections/SwiperCardsOverflow/styles.module.scss
+++ b/src/components/sections/SwiperCardsOverflow/styles.module.scss
@@ -3,7 +3,7 @@
 .mySwiper {
   width: 100%;
   height: 100%;
-  overflow: visible;
+  overflow: visible !important;
   & [class*='swiper-wrapper'] {
     align-items: stretch;
     // justify-content: center;
